# rye-project-template

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: adr.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml
app-template/: README.md  pyproject.toml
app-template/src/: main.py
hello-world/: Dockerfile  README.md  pyproject.toml
hello-world/cloudbuild/: run-deploy.yaml  test.yaml
hello-world/cloudrun/: run.yaml
hello-world/src/: main.py
hello-world/src/hello_world/: __init__.py
rye-template/: pyproject.toml
rye-template/src/: main.py  variables.py
uv-template/: pyproject.toml
