[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shibuya Keita", email = "shibuya.keita@cloud-ace.jp" }
]
dependencies = [
    "fastapi[standard]>=0.115.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
